@@ -33,7 +33,8 @@ cd -
 #export CFLAGS="-Wall -pedantic"
 #./configure --enable-agent --enable-server --with-libcurl --with-sqlite3 --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
 #./configure --enable-agent --enable-server --with-libcurl --with-pgsql --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
-./configure --enable-agent --enable-server --with-jabber --with-libcurl --with-mysql --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
+#./configure --enable-agent --enable-server --with-jabber --with-libcurl --with-mysql --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
+./configure --enable-agent --enable-server --with-jabber --with-libcurl --with-pgsql --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
 #./configure --enable-agent --enable-server --with-mysql --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
 #./configure --enable-agent --enable-server --with-oracle=/home/zabbix/sqlora8 --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
 echo Cleaning...
