@@ -13,6 +13,7 @@ CREATE TABLE users_tmp (
 ) ENGINE=InnoDB;
 CREATE INDEX users_1 on users_tmp (alias);
 
-insert into users_tmp select userid,alias,name,surname,passwd,url,autologout,lang,refresh,3 from users;
+insert into users_tmp select userid,alias,name,surname,passwd,url,autologout,lang,refresh,1 from users;
+update users_tmp set type=3 where name='Admin';
 drop table users;
 alter table users_tmp rename users;
