@@ -4,8 +4,6 @@ CREATE TABLE actions_tmp (
 	subject		varchar(255)		DEFAULT ''	NOT NULL,
 	message		text		DEFAULT ''	NOT NULL,
 	recipient	integer		DEFAULT '0'	NOT NULL,
-	maxrepeats	integer		DEFAULT '0'	NOT NULL,
-	repeatdelay	integer		DEFAULT '600'	NOT NULL,
 	source		integer		DEFAULT '0'	NOT NULL,
 	actiontype	integer		DEFAULT '0'	NOT NULL,
 	evaltype	integer		DEFAULT '0'	NOT NULL,
@@ -14,6 +12,6 @@ CREATE TABLE actions_tmp (
 	PRIMARY KEY (actionid)
 );
 
-insert into actions_tmp select actionid,userid,subject,message,recipient,maxrepeats,repeatdelay,source,actiontype,0,status,scripts from actions;
+insert into actions_tmp select actionid,userid,subject,message,recipient,source,actiontype,0,status,scripts from actions;
 drop table actions;
 alter table actions_tmp rename to actions;
