@@ -8,6 +8,6 @@ CREATE TABLE rights_tmp (
 );
 CREATE INDEX rights_1 on rights_tmp (groupid);
 
-insert into rights_tmp select rightid,groupid,type::integer,permission,id from rights;
+--insert into rights_tmp select rightid,groupid,type::integer,permission,id from rights;
 drop table rights;
 alter table rights_tmp rename to rights;
